# AutoGuard-OTA

./: .gitignore  README.md  client.Dockerfile  docker-compose.yml  launch_fleet.sh  server.Dockerfile
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/src/: main.cpp  partition_manager.cpp  partition_manager.h  test_partition.cpp
proto/: ota.proto
server/: requirements.txt
server/src/: admin_api.py  database.py  ota_pb2.py  ota_pb2_grpc.py  server.py
server/tests/: test_e2e.py
